--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Build with Buildozer
+        # Kullanıcı adındaki küçük harf hatası düzeltildi (ArtemSerebrennkov)
         uses: ArtemSerebrennkov/buildozer-action@v1
         with:
           buildozer_version: master
@@ -15,7 +16,8 @@ jobs:
           repository_root: .
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        # Deprecated olan v3 sürümü güncel v4 ile değiştirildi
+        uses: actions/upload-artifact@v4
         with:
           name: package
           path: bin/*.apk
