--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build with Buildozer
-        # Resmi Kivy Buildozer Action kullanıyoruz
-        uses: kivy/buildozer-action@master
+        # Bu versiyon şu an GitHub'da en erişilebilir olandır
+        uses: digreatbrian/buildozer-action@master
         with:
           command: android debug
           repository_root: .
