--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,37 @@
-name: APK Builder
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-debug-apk:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Build with Buildozer
-        # Bu versiyon şu an GitHub'da en erişilebilir olandır
-        uses: digreatbrian/buildozer-action@master
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
-          command: android debug
-          repository_root: .
+          distribution: 'temurin'
+          java-version: '11'
 
-      - name: Upload APK
+      - name: Set up Android SDK
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          arch: x86_64
+          target: google_apis
+          force-avd-creation: false
+
+      - name: Grant execute for gradlew
+        run: chmod +x ./gradlew
+
+      - name: Build debug APK
+        run: ./gradlew assembleDebug --no-daemon
+
+      - name: Upload debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: package
-          path: bin/*.apk
+          name: app-debug-apk
+          path: app/build/outputs/apk/debug/*.apk
