--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,22 @@
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+name: APK Builder
+on: [push]
 
 jobs:
-  build-debug-apk:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
+      - name: Build APK with Buildozer
+        # En stabil ve resmi olmayan kısıtlamalara takılmayan versiyon
+        uses: ArtemSerebrennkov/buildozer-action@v1
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          command: android debug
+          repository_root: .
 
-      - name: Set up Android SDK
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          arch: x86_64
-          target: google_apis
-          force-avd-creation: false
-
-      - name: Grant execute for gradlew
-        run: chmod +x ./gradlew
-
-      - name: Build debug APK
-        run: ./gradlew assembleDebug --no-daemon
-
-      - name: Upload debug APK
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug-apk
-          path: app/build/outputs/apk/debug/*.apk
+          name: package
+          path: bin/*.apk
