--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build with Buildozer
-        # Resmi Kivy organizasyonuna ait en güncel sürüm
+        # Kivy'nin kendi resmi aracıdır, en güvenlisidir
         uses: kivy/buildozer-action@master
         with:
           command: android debug
