--- a/.github/workflows/apk-builder.yml
+++ b/.github/workflows/apk-builder.yml
@@ -1,1 +1,37 @@
+name: APK Builder
+on: [push]
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    env:
+      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install system packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            python3-pip python3-venv openjdk-11-jdk zip unzip \
+            zlib1g-dev build-essential libssl-dev libffi-dev \
+            libncurses5-dev libsqlite3-dev libbz2-dev libreadline-dev liblzma-dev
+
+      - name: Upgrade pip and install Buildozer & Cython
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade cython buildozer
+
+      - name: Build with Buildozer
+        run: |
+          # Ensure you have a buildozer.spec in the repository configured for your app
+          buildozer -v android debug
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: package
+          path: bin/*.apk
