--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,19 +8,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install Dependencies and Android Licenses
+      - name: Install Aidl and System Dependencies
+        # Aidl hatasını manuel kurulumla kökten çözüyoruz
         run: |
           sudo apt-get update
           sudo apt-get install -y aidl python3-pip
-          # Android lisanslarını otomatik kabul etme komutu
-          yes | sdkmanager --licenses || true
 
       - name: Build with Buildozer
+        # Kivy'nin resmi aracını kullanarak tüm süreci Buildozer'a bırakıyoruz
         uses: kivy/buildozer-action@master
         with:
           command: android debug
